--- a/IIS.Web.Services/IIS.Web.Services.csproj
+++ b/IIS.Web.Services/IIS.Web.Services.csproj
@@ -85,8 +85,11 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CalculationDataRepository.cs" />
+    <Compile Include="Repositories\Enums\ConnectionStatus.cs" />
+    <Compile Include="Repositories\Helpers\SpaceStationDataOperations.cs" />
     <Compile Include="Repositories\Helpers\CalculationFormulas.cs" />
     <Compile Include="Repositories\Interfaces\ICalculationDataRepository.cs" />
+    <Compile Include="Services.DTOs\CalculatedSpaceStation.cs" />
     <Compile Include="Services.DTOs\SpaceStationData.cs" />
     <Compile Include="Services.DTOs\SpaceStationPosition.cs" />
     <Compile Include="UnitOfWork\Interfaces\IUnitOfWork.cs" />
