--- a/IIS.Web.Client/package.json
+++ b/IIS.Web.Client/package.json
@@ -2,6 +2,7 @@
   "name": "iss.client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Chlon123.github.io/ISS-Tracking",
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.8.4",
@@ -13,13 +14,16 @@
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "@types/jest": "^24.0.11",
     "@types/node": "^11.11.0",
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
+    "gh-pages": "^2.0.1",
     "typescript": "^3.3.3333"
   }
 }
